--- a/export/CM1_annexe_comparaison_architectures.html
+++ b/export/CM1_annexe_comparaison_architectures.html
@@ -877,7 +877,7 @@ table {
 <ul>
 <li>TD1 : Domain (2h) → faisable</li>
 <li>TD2 : Use cases + Ports (4h) → on comprend l'inversion</li>
-<li>TD3 : Repository SQL (4h) → on voit la puissance des adapters</li>
+<li>TD3 : Repository SQLite (4h) → on voit la puissance des adapters</li>
 <li>TD4 : API REST (4h) → on assemble tout</li>
 </ul>
 </section>
