--- a/export/CM1_Fondamentaux_architecture.html
+++ b/export/CM1_Fondamentaux_architecture.html
@@ -1165,8 +1165,8 @@ table {
                                         Database MySQL
 </code></pre>
 <p><strong>Avant :</strong> Métier dépend de la DB → Tester = installer MySQL → Changer de DB = réécrire métier<br />
-<strong>Après :</strong> Métier définit l'interface → Tester = injecter un fake → Changer de DB = nouvel adapter</p>
-<p><img class="emoji" draggable="false" alt="👉" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f449.svg" data-marp-twemoji=""/> <strong>C'est le cœur de l'architecture hexagonale</strong> (voir partie 4).</p>
+<strong>Après :</strong> Métier définit l'interface → Tester = injecter un fake → Changer de DB = nouvel adapter<br />
+<img class="emoji" draggable="false" alt="👉" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f449.svg" data-marp-twemoji=""/> <strong>C'est le cœur de l'architecture hexagonale</strong> (voir partie 4).</p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="20" data-paginate="true" data-theme="default" data-style="section {
   font-family: &quot;Liberation Sans&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif;
@@ -2424,7 +2424,7 @@ table {
 }
 ;" data-marpit-pagination-total="40">
 <h3 id="54-ressources">5.4 Ressources</h3>
-<p><img class="emoji" draggable="false" alt="📦" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f4e6.svg" data-marp-twemoji=""/> <strong>Template de code</strong> :<br />
+<p><img class="emoji" draggable="false" alt="📦" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f4e6.svg" data-marp-twemoji=""/> <strong>Template de code du projet Ticketing</strong> :<br />
 <a href="https://github.com/Marcennaji/ticketing_starter">https://github.com/Marcennaji/ticketing_starter</a></p>
 <p><img class="emoji" draggable="false" alt="📚" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f4da.svg" data-marp-twemoji=""/> <strong>Documentation TDs</strong> :<br />
 <a href="https://github.com/Marcennaji/architecture-logicielle-BUT2-ressources">https://github.com/Marcennaji/architecture-logicielle-BUT2-ressources</a></p>
