--- a/export/CM1_Fondamentaux_architecture.html
+++ b/export/CM1_Fondamentaux_architecture.html
@@ -1164,8 +1164,8 @@ table {
                                              │
                                         Database MySQL
 </code></pre>
-<p><strong>Avant :</strong> Métier dépend de la DB → Tester = installer MySQL → Changer de DB = réécrire métier<br />
-<strong>Après :</strong> Métier définit l'interface → Tester = injecter un fake → Changer de DB = nouvel adapter<br />
+<p>Avant : Métier dépend de la DB → Tester = installer MySQL → Changer de DB = réécrire métier<br />
+Après : Métier définit l'interface → Tester = injecter un fake → Changer de DB = nouvel adapter<br />
 <img class="emoji" draggable="false" alt="👉" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f449.svg" data-marp-twemoji=""/> <strong>C'est le cœur de l'architecture hexagonale</strong> (voir partie 4).</p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="20" data-paginate="true" data-theme="default" data-style="section {
