--- a/export/CM1_Fondamentaux_architecture.html
+++ b/export/CM1_Fondamentaux_architecture.html
@@ -223,7 +223,7 @@ table {
 <h2 id="%F0%9F%9A%80-1-pourquoi-parler-darchitecture"><img class="emoji" draggable="false" alt="🚀" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f680.svg" data-marp-twemoji=""/> 1. Pourquoi parler d'architecture ?</h2>
 <p>Sans vraie architecture, on obtient vite :</p>
 <ul>
-<li>Du <strong>code spaghetti</strong> <img class="emoji" draggable="false" alt="🍝" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f35d.svg" data-marp-twemoji=""/> <em>(attention aux indigestions)</em></li>
+<li>Du <strong>code spaghetti</strong> <img class="emoji" draggable="false" alt="🍝" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f35d.svg" data-marp-twemoji=""/></li>
 <li>Une application <strong>difficile à comprendre</strong></li>
 <li>Des bugs qui reviennent en boucle</li>
 <li>Une application <strong>impossible à tester</strong></li>
@@ -2423,19 +2423,20 @@ table {
 }
 ;" data-marpit-pagination-total="41">
 <h3 id="53-%C3%A9valuation">5.3 Évaluation</h3>
-<p><img class="emoji" draggable="false" alt="📊" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f4ca.svg" data-marp-twemoji=""/> <strong>Répartition</strong> :</p>
+<p><img class="emoji" draggable="false" alt="📊" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f4ca.svg" data-marp-twemoji=""/> <strong>Composantes</strong> :</p>
 <ul>
-<li>30% : Projet final (GitHub, code fonctionnel)</li>
-<li>40% : Exercices de TD (livrables intermédiaires)</li>
-<li>30% : Contrôle final (analyse de code architectural)</li>
+<li>Travail en TD (TD1-TD4) - Soumission via GitHub + auto-validation</li>
+<li>QCM final - 30-45 mn en dernière séance</li>
+<li>Bonus présentiel - Travail soumis pendant séances TD valorisé</li>
 </ul>
 <p><img class="emoji" draggable="false" alt="⚠️" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/26a0.svg" data-marp-twemoji=""/> <strong>Important</strong> :</p>
 <ul>
-<li>70% de la note <strong>sans IA</strong> (TD présentiel + Contrôle)</li>
-<li>L'IA est <strong>autorisée</strong> pour le projet à la maison</li>
-<li>Mais <strong>comprendre</strong> l'architecture reste indispensable</li>
+<li>L'IA est <strong>autorisée</strong> pour le projet</li>
+<li>Mais <strong>comprendre</strong> l'architecture reste indispensable pour le QCM</li>
+<li>Le travail effectué en présentiel (sans IA intensive) est valorisé</li>
 </ul>
-<p><img class="emoji" draggable="false" alt="📖" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f4d6.svg" data-marp-twemoji=""/> Grille détaillée : <code>td/evaluation.md</code></p>
+<p><img class="emoji" draggable="false" alt="📖" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f4d6.svg" data-marp-twemoji=""/> Détails complets : <code>td/evaluation.md</code></p>
+<p><strong>Barèmes détaillés communiqués en début de module.</strong></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="40" data-paginate="true" data-theme="default" data-style="section {
   font-family: &quot;Liberation Sans&quot;, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, sans-serif;
