--- a/export/CM1_annexe_TDD.html
+++ b/export/CM1_annexe_TDD.html
@@ -1777,7 +1777,7 @@ table {
 </tr>
 <tr>
 <td>&quot;TDD remplace l'architecture&quot;</td>
-<td>TDD <strong>révèle</strong> les problèmes, pas les résout automatiquement</td>
+<td>TDD <strong>révèle</strong> les problèmes, ne les résout pas automatiquement</td>
 </tr>
 <tr>
 <td>&quot;TDD impose le design&quot;</td>
