--- a/export/architectures_modernes.html
+++ b/export/architectures_modernes.html
@@ -49,7 +49,7 @@ table {
 ;" data-marpit-pagination-total="29" data-size="4:3">
 <h1 id="%F0%9F%A7%B1-cm1--panorama-des-architectures-logicielles-modernes"><img class="emoji" draggable="false" alt="🧱" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f9f1.svg" data-marp-twemoji=""/> CM1 : Panorama des architectures logicielles modernes</h1>
 <p><img class="emoji" draggable="false" alt="🎓" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f393.svg" data-marp-twemoji=""/> BUT Informatique — Ressource R4.01 « Architecture logicielle »<br />
-<img class="emoji" draggable="false" alt="👨‍🏫" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f468-200d-1f3eb.svg" data-marp-twemoji=""/> Enseignant·e : <em>à compléter</em></p>
+<img class="emoji" draggable="false" alt="👨‍🏫" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f468-200d-1f3eb.svg" data-marp-twemoji=""/> Enseignant : Marc Ennaji</p>
 <p><img class="emoji" draggable="false" alt="🛠" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f6e0.svg" data-marp-twemoji=""/> Objectif du cours :<br />
 Comprendre <strong>pourquoi</strong> on parle d’architecture logicielle et découvrir les <strong>principales architectures</strong> rencontrées dans le monde professionnel.</p>
 </section>
