--- a/export/CM1_Fondamentaux_architecture.html
+++ b/export/CM1_Fondamentaux_architecture.html
@@ -2551,7 +2551,7 @@ table {
 <p><strong><img class="emoji" draggable="false" alt="🚀" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f680.svg" data-marp-twemoji=""/> Prochaine étape :</strong> TD0 (prise en main environnement + workflow)</p>
 <p><strong><img class="emoji" draggable="false" alt="📚" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f4da.svg" data-marp-twemoji=""/> Ressources complémentaires :</strong></p>
 <ul>
-<li>Annexes (PDF) : <a href="https://github.com/Marcennaji/architecture-logicielle-BUT2-ressources/blob/main/export/CM1_annexe_comparaison_architectures.pdf">Comparaison architectures</a>, <a href="https://github.com/Marcennaji/architecture-logicielle-BUT2-ressources/blob/main/export/CM1_annexe_TDD.pdf">TDD</a>, <a href="https://github.com/Marcennaji/architecture-logicielle-BUT2-ressources/blob/main/export/CM1_annexe_monolithe_microservices.pdf">Monolithe vs Microservices</a></li>
+<li>Annexes (PDF) : <a href="https://github.com/Marcennaji/architecture-logicielle-BUT2-ressources/blob/main/export/CM1_annexe_pourquoi_hexagonale.pdf">Pourquoi l'hexagonale ?</a>, <a href="https://github.com/Marcennaji/architecture-logicielle-BUT2-ressources/blob/main/export/CM1_annexe_TDD.pdf">TDD</a></li>
 <li>Articles : <a href="https://blog.octo.com/architecture-hexagonale-trois-principes-et-un-exemple-dimplementation">Architecture Hexagonale (OCTO)</a></li>
 <li>Toutes les ressources : <a href="https://github.com/Marcennaji/architecture-logicielle-BUT2-ressources">https://github.com/Marcennaji/architecture-logicielle-BUT2-ressources</a></li>
 </ul>
