--- a/export/CM1_Fondamentaux_architecture.html
+++ b/export/CM1_Fondamentaux_architecture.html
@@ -2552,6 +2552,7 @@ table {
 <p><strong><img class="emoji" draggable="false" alt="📚" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f4da.svg" data-marp-twemoji=""/> Ressources complémentaires :</strong></p>
 <ul>
 <li>Annexes : <a href="https://github.com/Marcennaji/architecture-logicielle-BUT2-ressources/blob/main/export/annexe_00_guide_lecture.pdf">Guide de lecture + 3 annexes thématiques</a></li>
+<li>Bibliographie : <a href="https://www.georgefairbanks.com/book/">Just Enough Software Architecture</a>, <a href="https://www.oreilly.com/library/view/fundamentals-of-software/9781492043447/">Fundamentals of Software Architecture</a></li>
 <li>Articles : <a href="https://blog.octo.com/architecture-hexagonale-trois-principes-et-un-exemple-dimplementation">Architecture Hexagonale (OCTO)</a></li>
 <li>Toutes les ressources : <a href="https://github.com/Marcennaji/architecture-logicielle-BUT2-ressources">https://github.com/Marcennaji/architecture-logicielle-BUT2-ressources</a></li>
 </ul>
