--- a/export/CM1_Fondamentaux_architecture.html
+++ b/export/CM1_Fondamentaux_architecture.html
@@ -2433,7 +2433,7 @@ table {
 <li>Mais <strong>comprendre</strong> l'architecture reste indispensable pour le QCM</li>
 <li>Le travail effectué en présentiel (sans IA intensive) est valorisé</li>
 </ul>
-<p><img class="emoji" draggable="false" alt="📖" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f4d6.svg" data-marp-twemoji=""/> Détails complets : <a href="../td/EVALUATION.md">td/EVALUATION.md</a></p>
+<p><img class="emoji" draggable="false" alt="📖" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f4d6.svg" data-marp-twemoji=""/> Détails complets : <a href="../td/evaluation.md">td/evaluation.md</a></p>
 <p><strong>Barèmes détaillés communiqués en début de module.</strong></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="40" data-paginate="true" data-theme="default" data-style="section {
